build(vscode): 🧑‍💻 Add vs-browser settings for a Web Browser in VS Code + default task setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,14 @@
     "**/.now/": true,
     "**/.vercel/": true,
     "**/.google.json": true
-  }
+  },
+  "conventionalCommits.scopes": [
+    "layout",
+    "vscode"
+  ],
+  "vs-browser.reload.autoReloadEnabled": false,
+  "vs-browser.reload.autoReloadDurationTime": 3000,
+  "vs-browser.reload.onSave": true,
+  "vs-browser.url": "http://localhost:3000",
+  "editor.defaultFormatter": "HookyQR.beautify"
 }
