build(vscode): 🔧 Add `yarn dev` to vscode tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,14 @@
 			"problemMatcher": [],
 			"label": "npm: dev",
 			"detail": "next dev"
+		},
+		{
+			"type": "yarn",
+			"task": "dev",
+			"problemMatcher": [
+				"$gulp-tsc"
+			],
+			"label": "yarn: dev"
 		}
 	]
 }
